<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 通用字符串 -->
    <string name="app_name">律师助手</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="search_keyword">请输入关键字</string>
    <string name="add">添加</string>
    <string name="match">匹配信息</string>
    <string name="detail">详情</string>
    <string name="communication">联络信息</string>
    <string name="retry">重试</string>
    <string name="refresh">刷新</string>
    <string name="text_none">无</string>

    <!-- 首页标签 -->
    <string name="tab_title_company">公司</string>
    <string name="tab_title_investment">资金</string>
    <string name="tab_title_financing">项目</string>
    <string name="tab_title_case">案件</string>

    <!-- 基本信息 -->
    <string name="basic_info">基本信息</string>
    <string name="name">姓名</string>
    <string name="phone_number">电话</string>
    <string name="mail">邮箱</string>
    <string name="source">来源</string>
    <string name="type">类型</string>
    <string name="address">地址</string>
    <string name="comments">备注</string>
    <string name="attachments">附件</string>    

    <!-- 佣金信息 -->
    <string name="commission_info">佣金信息</string>
    <string name="have_commission">是否有佣金</string>
    <string name="commission_ratio">佣金比例</string>

    <!-- 资金信息 -->
    <string name="investment_info">投资信息</string>
    <string name="capital_source">资金来源</string>
    <string name="rating">评级</string>
    <string name="investment_industry">投资行业</string>
    <string name="investment_way">投资方式</string>
    <string name="prior_cost">前期费用</string>
    <string name="examine_cycle">审批周期</string>
    <string name="investment_quota">投资额度</string>
    <string name="investment_horizon">投资期限</string>
    <string name="investment_profit">投资收益</string>
    <string name="investment_purpose">投资用途</string>
    <string name="flow_area">流向区域</string>
    <string name="guarantee_type">担保方式</string>
    <string name="payment">还款方式</string>
    <string name="finance_info">融资信息</string>
    <string name="finance_cost">融资成本</string>
    <string name="finance_quota">融资额度</string>
    <string name="finance_style">融资方式</string>
    <string name="finance_horizon">融资期限</string>
	<string name="finance_industry">融资行业</string>
    <string name="project_area">项目所在地</string>
    <string name="expiry_date">有效期</string>
    
    <!-- 案件信息 -->
    <string name="cause">案由</string>
    <string name="case_no">法院案号</string>
    <string name="court_name">受理法院</string>
    <string name="court_address">法院通讯地址</string>
    <string name="accept_at">受理日期</string>
    <string name="receive_notice_at">收到应诉通知书日期</string>
    <string name="juger_name">主审法官</string>
    <string name="juger_phone">主审法官电话</string>
    <string name="clerk_name">书记员</string>
    <string name="clerk_phone">书记员电话</string>
    <string name="reply_limit">答辩期限</string>
    <string name="open_at">开庭日期</string>
    <string name="judge_at">判决日期</string>
    <string name="receive_judge_at">判决书签收日期</string>
    <string name="appeal_limit">上诉期截止日期</string>
    <string name="create_at">创建时间</string>
    <string name="modify_at">最后修改时间</string>
    <string name="client_receive">委托人签收</string>
    <string name="oppo_lawyer">对方代理人</string>
	<string name="oppo_client">对方当事人</string>
    <string name="client">委托人</string>
    <string name="case_level">审级</string>
    <string name="proof_limit">举证期限</string>
    <string name="receive_at">收案日期</string>
    <string name="case_communication">通讯</string>
          
    <!-- 联络信息 -->
	<string name="msg_direction_from">收到</string>
    <string name="msg_direction_to">发出</string>

    <!-- 提示信息 -->
    <string name="state_text_communication_none">暂无联络信息</string>
    <string name="state_text_match_none">暂无匹配信息</string>
	<string name="state_text_waiting">正在获取数据……</string>
    <string name="state_text_failed">获取数据失败，请重试</string>
    
    <!-- 关于信息 -->
    <string name="about">关于</string>
    <string name="about_version">版本：</string>
    <string name="about_email">邮箱：</string>
    <string name="about_rd">作者：</string>
    
</resources>