<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="3dp"
            android:background="@color/title_bg" 
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_company_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/color_bai" />

            <Button
                android:id="@+id/btn_company_communication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/communication" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_bg"
            android:paddingLeft="5dp"
            android:text="@string/basic_info"
            android:textColor="@color/color_bai" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:background="@color/color_zhonghui"
                android:text="@string/source" />

            <TextView
                android:id="@+id/tv_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:background="@color/color_zhonghui"
                android:text="@string/type" />

            <TextView
                android:id="@+id/tv_company_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:background="@color/color_zhonghui"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:background="@color/color_zhonghui"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/color_zhonghui"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/color_zhonghui"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:background="@color/title_bg"
            android:text="@string/investment_info"
            android:textColor="@color/color_bai" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:background="@color/color_zhonghui"
                android:text="@string/capital_source" />

            <TextView
                android:id="@+id/tv_capital_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:background="@color/color_zhonghui"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:background="@color/color_zhonghui"
                android:text="@string/investment_industry" />

            <TextView
                android:id="@+id/tv_investment_industry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:background="@color/color_zhonghui"
                android:text="@string/investment_way" />

            <TextView
                android:id="@+id/tv_investment_way"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.0"
                android:background="@color/color_zhonghui"
                android:text="@string/flow_area" />

            <TextView
                android:id="@+id/tv_flow_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="11.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:background="@color/title_bg"
            android:text="@string/commission_info"
            android:textColor="@color/color_bai" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:background="@color/color_zhonghui"
                android:text="@string/have_commission" />

            <TextView
                android:id="@+id/tv_have_commission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:background="@color/color_zhonghui"
                android:text="@string/commission_ratio" />

            <TextView
                android:id="@+id/tv_radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:background="@color/title_bg"
            android:text="@string/comments"
            android:textColor="@color/color_bai" />

        <WebView
            android:id="@+id/wv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="5dp"
            android:background="@color/title_bg"
            android:text="@string/attachments"
            android:textColor="@color/color_bai" />

        <TextView
            android:id="@+id/tv_attachments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>